# REHEATFUNQ

./: .dockerignore  CITATION.cff  COPYING  Dockerfile  Dockerfile-stable  README.md  build-Dockerfile-stable.sh  check-version.py  compile.sh  meson.build  meson_options.txt  numpy-include.py  pyproject.toml  setup.py
.github/scripts/: ensure-geographiclib-cmake.sh  numpy-include.py
.github/workflows/: sphinx.yml  testing.yml  versioncheck.yml
docker/: bootstrap-gcc.sh  test-jupyter-imports.py
docs/: conf.py  index.rst
docs/api/: anomaly.rst  coverings.rst  data.rst  regional.rst  resilience.rst
docs/usage/: installation.rst  quickstart.rst  references.rst
include/: anomaly.hpp
include/anomaly/: ls1980.hpp  nearestneighbor.hpp  posterior.hpp  variableprecisionposterior.hpp
include/anomaly/posterior/: amax.hpp  args.hpp  exceptions.hpp  integrand.hpp  large_z.hpp  locals.hpp  localsandnorm.hpp
include/coverings/: dminpermutations.hpp  packedvector2d.hpp
include/numerics/: barylagrint.hpp  cdfeval.hpp  functions.hpp  intervall.hpp  kahan.hpp  limits.hpp  simpson.hpp
include/resilience/: resilience.hpp
include/testing/: barylagrint.hpp
include/utility/: pyfunwrap.hpp
jupyter/: Custom-Anomaly.ipynb  Quickstart.ipynb
jupyter/REHEATFUNQ/: 01-Load-and-filter-NGHF.ipynb  02-Study-Area-Geometry.ipynb  03-Gamma-Conjugate-Prior-Parameters.ipynb  04-Global-Map.ipynb  05-UCERF3.ipynb  06-Heat-Flow-Analysis.ipynb  A1-Critical-EDF-Statistics.ipynb  A10-Gamma-Sketch.ipynb  A11-Sketch-Generate-Permutations.ipynb  A11-Sketches-Permutations+Synthetic-Fault.ipynb  A13-Gamma-Landscape.ipynb  A2-Goodness-of-Fit_R_and-Mixture-Distributions.ipynb  A3-Posterior-Impact.ipynb  A4-Resilience-to-Other-Distributions.ipynb  A5-Uniform-Point-Density.ipynb  A6-Comparison-With-Other-Distributions.ipynb  A7-Bias-10-Percent-Tail-Quantile-Alpha-Beta.ipynb  A8-Data-Size-vs-Variance.ipynb  A9-Simple-Heat-Conduction.ipynb  cache.py  plotconfig.py
jupyter/REHEATFUNQ/data/: SoCal-Regions.gpkg
jupyter/REHEATFUNQ/results/: A2-Distributions-for-Resilience.json  nghf-selection-indices.csv
jupyter/REHEATFUNQ/zeal2022hf/: COPYING  README.md  __init__.py  geojson.py  geopackage.py  plottools.py  ucerf3.py
jupyter/data/: example-heatflow.json
pdtoolbox/: COPYING  README  gamma.cpp  ll_cache.hpp  ll_gamma_conjugate_prior.cpp  ll_gamma_conjugate_prior.hpp  optimize.hpp  ziebarth2022a.cpp
pdtoolbox/include/: eigenwrap.hpp  gamma.hpp  ll_cache.hpp  matrix.hpp
pdtoolbox/src/: ll_gamma_conjugate_prior.cpp  ziebarth2022a.cpp
reheatfunq/: __init__.py
reheatfunq/_testing/: barylagrint.pyx  mpm.py
reheatfunq/anomaly/: __init__.py  anomaly.pyx  bayes.pxd  bayes.pyx  postbackend.pyx  posterior.py
reheatfunq/coverings/: __init__.py  poisampling.pyx  rdisks.pyx  rgrdc.py
reheatfunq/data/: __init__.py  distancedistribution.pyx  nghf.py
reheatfunq/regional/: __init__.py  backend.pyx  predictive.py  prior.py
reheatfunq/resilience/: __init__.py  zeal2022hfresil.pyx
src/: anomaly.cpp
src/anomaly/: ls1980.cpp  nearestneighbor.cpp  posterior.cpp  variableprecisionposterior.cpp
src/anomaly/posterior/: integrand.cpp
src/coverings/: dminpermutations.cpp  packedvector2d.cpp
src/numerics/: boostassert.cpp
src/resilience/: resilience.cpp
src/testing/: barylagrint.cpp
src/utility/: pyfunwrap.cpp
subprojects/zeal2022hfpc/include/: mixture_error.hpp  resilience.hpp  synthetic_covering.hpp
subprojects/zeal2022hfpc/src/: mixture_error.cpp  resilience.cpp
testing/: test_anomaly_posterior.py  test_gcp.py  test_import.py  test_numerics.py  test_rdisks.py
