option('anomaly_posterior_float128', type : 'boolean', value : false,
       description : 'Whether to support GCC 128bit floats in the anomaly ' +
                     'quantification posterior.')
option('anomaly_posterior_dec50', type : 'boolean', value : false,
       description : 'Whether to support 50 digit boost multiprecision ' +
                     'floating point numbers in the anomaly quantification ' +
                     'posterior.')
option('anomaly_posterior_dec100', type : 'boolean', value : false,
       description : 'Whether to support 50 digit boost multiprecision ' +
                     'floating point numbers in the anomaly quantification ' +
                     'posterior.')